# server_client

./: CMakeLists.txt  Makefile  server_client  ssh_server_client.txt  usc  usfull_info.txt
inc/: BroadcastController.hpp  CastumException.hpp  Client.hpp  CustomException.hpp  FlagsHendler.hpp  RouterData.hpp  RouterInfoController.hpp  ScriptExecutor.hpp  Server.hpp  StatusController.hpp  TCP_IP_Worker.hpp  lib.h
inc/client_tools/: Client.hpp
inc/server_tools/: Sender.hpp  Server.hpp
scripts/: alterSendFile.sh  checkWAN.sh  check_internet.sh  connectTo.sh  sendSetting.sh  some.sh  test
src/: BroadcastController.cpp  CastumException.cpp  Client.cpp  CustomException.cpp  FlagsHendler.cpp  RouterData.cpp  RouterInfoController.cpp  ScriptExecutor.cpp  Server.cpp  StatusController.cpp  TCP_IP_Worker.cpp  main.cpp
src/client_tools/: Client.cpp
src/server_tools/: Sender.cpp  Server.cpp
